--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ index.html
 </head>
 
 <body>
+    <h2>최유진</h2>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
